--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "16.x"
   },
   "scripts": {
+    "start": "react-scripts start",
     "build": "npm install --prefix client && npm run build --prefix client",
     "clean": "rm -rf public",
     "deploy": "cp -a client/build/. public/",
@@ -13,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "react-scripts": "^5.0.1"
   }
 }
